fix(kubrick): hide AWS/Azure top link on narrow screens

--- a/src/media/asset/style_glass.css
+++ b/src/media/asset/style_glass.css
@@ -215,7 +215,7 @@ body.light-mode .video-bg:before {
 }
 
 @media screen and (max-width: 1055px) {
-  .notify {
+  span.menu-link {
     display: none;
   }
 }
